# rby1-sdk

./: CHANGELOG.md  CMakeLists.txt  build_teleoperation_with_joint_mapping_kgs.sh  install_jetson_orin.sh
.github/workflows/: build-and-test.yml  release.yml
examples/cpp/: 01_hello_rby1.cpp  02_power_command.cpp  02_robot_model_setting.cpp  03_robot_state.cpp  04_get_robot_state.cpp  04_parameter.cpp  05_collisions.cpp  06_cancel_control.cpp  06_stop_command.cpp  07_impedance_control.cpp  08_zero_pose.cpp  09_get_pid_gain.cpp  10_get_pid_gain.cpp  10_set_pid_gain.cpp  11_set_pid_gain.cpp  12_fatory_default_pid_gain.cpp  13_robot_model.cpp  14_led.cpp  15_set_system_time.cpp  16_battery_config.cpp  18_check_firmware_version.cpp  19_master_arm.cpp  20_leader_arm.cpp  20_master_arm.cpp  20_wifi.cpp  21_record.cpp  21_servo_off.cpp  22_joint_impedance_control.cpp  22_replay.cpp  23_serial_device.cpp  24_demo_motion.cpp  24_serial_communication.cpp  25_fault_log.cpp  26_collisions.cpp  26_joint_group_command.cpp  27_impedance_control.cpp  27_multi_controls.cpp  28_real_time_control_command.cpp  29_dynamics_modeling.cpp  29_joint_group_command.cpp  (+29 more)
examples/cpp/module_test/: CMakeLists.txt  ft_sensor.cpp  gripper.cpp  head.cpp  leader_arm.cpp  left_arm.cpp  master_arm.cpp  right_arm.cpp  tool_flange.cpp  torso.cpp
examples/python/: 01_hello_rby1.py  02_power.py  02_robot_model_setting.py  03_robot_state.py  04_robot_state_stream.py  05_collisions.py  05_parameter.py  05_robot_state_stream.py  06_cancel_control.py  07_impedance_control.py  08_zero_pose.py  09_demo_motion.py  09_get_pid_gain.py  10_get_pid_gain.py  10_set_pid_gain.py  11_set_pid_gain.py  13_robot_model_setting.py  (+52 more)
python/: robot.cpp  upc.cpp
(+16 files in other folders)
